style: fix tool-shapes-dropdown position on mobile

--- a/apps/web/src/app/_shared/components/pdf-editor/pdf-editor-toolbar/pdf-editor-toolbar.component.scss
+++ b/apps/web/src/app/_shared/components/pdf-editor/pdf-editor-toolbar/pdf-editor-toolbar.component.scss
@@ -24,7 +24,7 @@
 }
 
 .tool-shapes-dropdown.tool-options-dropdown {
-    left: -30px;
+    left: -130px;
 }
 
 .zoom-controls {
@@ -55,5 +55,4 @@
     .zoom-controls {
         display: none;
     }
-
 }
